<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dealing Mart</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="search_hint">Enter product or brand name</string>
    <string name="title_deal_of_the_day">Deal of the day</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="category_title">Categories</string>
    <string name="offer">OFFER</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="buy_now">Buy Now</string>
    <string name="specifications">Specifications</string>
    <string name="dialog_message">Share DealingMart information and Get assured gifts </string>
    <string name="share_message">Please install this app dealingmart from https://play.google.com/store/apps/details?id=com.aamani.dealingmart&amp;hl=en and get surprise gifts from me</string>
    <string name="dialog_message_backto_contact_activity">Use promo code offer2014 and get Rs.500 off on your first purchase and your first purchase should be above or same Rs.2500</string>

    <!-- category -->
    <string name="category_electronics">Electronics</string>
    <string name="mobile">Mobile</string>
    <string name="tablet">Tablet</string>
    <string name="category_book_stationary">Book &amp; Stationary</string>
    <string name="book">Book</string>
    <string name="stationary">Stationary</string>
    <string name="category_giftarticles">Gift Articles</string>
    <string name="photo_frame">Photo Frame</string>
    <string name="golden_divinity">Golden Divinity</string>
    <string name="crystal_showpiece">Crystal Showpiece</string>
    <string name="designer_watch">Designer Watch</string>
    <string name="sunglasses">Sunglasses</string>
    <string name="handicraft">Handicraft</string>
    <string name="hipflask">Hip Flask</string>
    <string name="indianflag">Indian Flag</string>
    <string name="lordganesh">Lord Ganesha</string>
    <string name="silverpen">Silver Pen</string>
    <string name="painting">Painting</string>
    <string name="category_men">Men</string>
    <string name="cravats">Cravats</string>
    <string name="cufflinks">Cufflinks</string>
    <string name="socks">Socks</string>
    <string name="suspender">Suspender</string>
    <string name="ties">Ties</string>
    <string name="shirts">Shirts</string>
    <string name="t_shirts">T-Shirts</string>
    <string name="tuxeda_studs">Tuxeda Studs</string>
    <string name="shorts">Shorts</string>
    <string name="trackpants">Track Pants</string>
    <string name="capri">Capri</string>
    <string name="category_women">Women</string>
    <string name="jeggings">Jeggings</string>
    <string name="nightwear">Nightwear</string>
    <string name="pendant">Pendant</string>
    <string name="pyjamas">Pyjamas</string>
    <string name="slip">Slip</string>
    <string name="tights">Tights</string>
    <string name="necklace">Necklace</string>
    <string name="bangle">Bangle</string>
    <string name="bracelet">Bracelet</string>
    <string name="earrings">Earrings</string>
    <string name="handbags">Hand Bags</string>
    <string name="category_lifestyle">Lifestyle</string>
    <string name="beauty_and_cosmetics">Beauty and Cosmetics</string>
    <string name="jwellery">Jewellery</string>
    <string name="catergory_appliances">Appliances</string>
    <string name="home_appliances">Home Appliances</string>
    <string name="category_bags">Bags and Accessories</string>
    <string name="travelling_bags">Travelling Bags</string>
    <string name="laptop_bags">Laptop Bags</string>
    <string name="bagpacks">Bagpacks</string>
    <string name="share_product_info">Share Product Information And Get Rewards</string>
    <string name="product_share_message">An offer is available on $, Please install the app from google playstore to access it.</string>
    <string name="email_subject">Dealing Mart Offer</string>
    <string name="title_activity_full_image">FullImageActivity</string>
    <string name="brands_title">Brands</string>
    <string name="no_spec_found">No specifications found</string>
    <string name="title_activity_shopping_cart">ShoppingCartActivity</string>
    <string name="continue_text">Continue</string>
    <string name="home_decore">Home Decore</string>
    <string name="office_decore">Office Decore</string>
    <string name="clothing">Clothing</string>
    <string name="other_accessories">Other Accessories</string>
    <string name="category_healthVellness">Health &amp; Wellness</string>
    <string name="kit">Kit</string>

    <!-- error messages -->
    <string name="no_products_found">No products found for this category,Please try another category</string>
    <string name="twitter_not_installed">Twitter is not installed on your device</string>
    <string name="whatsapp_not_installed">Whatsapp is not installed on your device</string>
    <string name="facebook_not_installed">Facebook is not installed on your device</string>
    <string name="credential_invalid">Please provide valid credential</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_guest_title">"Continue as a "</string>
    <string name="guest_button">Guest</string>
    <string name="customer_login">Customer Login</string>
    <string name="customer_email">Email Id:</string>
    <string name="customer_password">Password</string>
    <string name="login_button">Login</string>
    <string name="provide_detail_title">Provide your Details:</string>
    <string name="title_activity_shipping_address">ShippingAddressActivity</string>
    <string name="shipping_address">Enter Shipping Details</string>
    <string name="full_name">Full Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="pin_code">Pin Code</string>
    <string name="country">Country</string>

    <string-array name="country_list">
        <item>IN</item>
    </string-array>

    <string name="submit">Submit</string>
    <string name="title_activity_order_summary_page">OrderSummaryPage</string>
    <string name="order_summary_title">Order Summary</string>
    <string name="total_amount">Total Amount:</string>
    <string name="enter_promocode">Enter Promocode</string>
    <string name="apply_promocode">Apply</string>
    <string name="new_amount">New Amount</string>
    <string name="pay_now">Pay Now</string>
    <string name="name_is_null">Name Cannot be Null</string>
    <string name="phone_is_null">Phone is not valid</string>
    <string name="email_is_null">Email is not valid</string>
    <string name="address_is_null">Address Cannot be Null</string>
    <string name="city_is_null">City Cannot be Null</string>
    <string name="state_is_null">State Cannot be Null</string>
    <string name="pincode_is_null">Pincode Cannot be Null</string>
    <string name="latest_offers_title">Latest Offers</string>
    <string name="get_shipping_address_dialog_message">Getting Shipping Details,Please wait</string>
    <string name="no_shipping_detail_found">No shipping detail found,Please fill the details</string>
    <string name="insert_detail">Insert</string>
    <string name="shipping_detail_insert_successfull">Shipping Detail inserted successfully</string>
    <string name="shipping_detail_not_insert_successfull">Shipping Detail is not inserted successfully</string>
    <string name="no_product_in_the_cart">Please add atleast one product to cart</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="loading_cateogry_progress_message">Please wait,While we get the latest categories</string>
    <string name="product_url">http://www.dealingmart.com/Particular.aspx?product_id=$</string>
    <string name="product__info_detail_text">Great * on Dealing Mart View this link $ to buy the product</string>
    <string name="get_new_products">Getting New Products,Please Wait</string>
    <string name="title_activity_display_contact">DisplayContactActivity</string>
    <string name="contacts">Contacts</string>
    <string name="send_message">Send</string>
    <string name="loading_text">Loading, Please wait</string>
    <string name="features">Features</string>
    <string name="product_detail_attribute_title">Product Detail</string>
    <string name="share_app_via">Share Application Information Via</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="head_office_title">Head Office</string>
    <string name="office_address">Aamani Group</string>
    <string name="abad_branch">Ahmedabad Branch</string>
    <string name="abad_address">Aamani House, 6/7, P.K House,B/h M.J. Library,Ellisbridge</string>
    <string name="amreli_branch">Amreli Branch</string>
    <string name="amreli_address">1st floor,Sahkar Bhavan, Opp Bhidbhanjan temple,Amreli</string>
    <string name="mehsana_branch">Mehsana Branch</string>
    <string name="mehsana_address">G-36 Wide Angle Complex, Nr. Khsuhi Rivers, Opp. Himalaya mall,Mehsana</string>
    <string name="surat_bracnh">Surat Branch</string>
    <string name="surat_address">v-7/8, Shakuntal Complex, Nr. Sanghvi Towers, Gujarat gas circle.</string>
    <string name="rajkot_branch">Rajkot Branch</string>
    <string name="rajkot_address">501, 5th Floor, Alap – B, Limda Ckowk, Opp. Sashrti Medan, Rajkot</string>
    <string name="bhavnagar_branch">Bhavnagar Branch</string>
    <string name="bhavnagar_address">108,Shopers plaza, Parimal chawk, Opp Jade Blue,Vaghvadi Road</string>
    <string name="nj_bracnh">New Jersey Branch</string>
    <string name="nj_address">New Jersey, 9732235047</string>
    <string name="share_application">Share Application Information</string>

</resources>