<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/guest_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/login_guest_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <Button
            android:id="@+id/customer_guest_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/news_title_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/guest_button"
            android:textSize="17sp" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/grey_line" />

    <LinearLayout
        android:id="@+id/customer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/login_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/customer_login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right|center_vertical"
                    android:text="@string/customer_email"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:gravity="right|center_vertical"
                    android:text="@string/customer_password"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.5"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/customer_login_emailid_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:inputType="textEmailAddress" >
                </EditText>

                <EditText
                    android:id="@+id/customer_login_password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/customer_login_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/news_title_bg"
            android:text="@string/login_button"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>